1999-06-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * spvw_sigsegv.d (stackoverflow_handler): Restore the STACK on Solaris
          and OSF/1 as well.

1999-06-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (UNIX_OPENBSD): New macro.
        * eval.d (interpret_bytecode_): Use hairy gas assembler syntax only
          on Linux and *BSD, never on other OSes.

1999-06-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * eval.d (interpret_bytecode_): Use "\n\t" as assembler statement
          separator instead of ";".

1999-06-16  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * describe.lsp (describe-object): Put back i18n call around
          punctuation strings.
        * socket.d (resolve_host_ipaddr): Likewise.

1999-06-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d, genclisph.d: Prepare for __GNUC__ == 3.

1999-06-15  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * compiler.lsp (macroexpand-1): Do not pass ENV to `macro-function'.
          (c-form): Do not pass ENV to `macro-function'.

        * places.lsp (MACRO-FUNCTION): Add optional, ignored env argument.

        * control.d (SYSTEM::OLD-MACRO-FUNCTION): New function.
        * eval.d (FUNTAB): Use it instead of MACRO-FUNCTION.
        * compiler.lsp (funtab): Likewise.

        * sequence.d (test_count_arg): Simplify.

1999-06-10  Sam Steingold  <sds@goems.com>

	* describe.lsp (describe-object): dump `ENGLISH' before ".".

	* socket.d (resolve_host_ipaddr): correct the order of arguments
	in the `fehler' call.

	* init.lsp (*load-level*): new variable.
	(load): use it to indent the verbose printout nicely.

1999-06-10  Sam Steingold  <sds@goems.com>

	* list.d (nreconc): be as smart about `nreconc' as we are about
	`nreverse'.

1999-06-09  Sam Steingold  <sds@goems.com>

	* misc.d (set-ansi): set `*coerce-fixnum-char-ansi*',
	`*sequence-count-ansi*', and `*print-pathnames-ansi*'.